# LifeCouldBeDream

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt
bot/: CMakeLists.txt
bot/sources/: bot.cpp  bot.hpp  dream.cpp  dream.hpp  driver.cpp  driver.hpp  http.hpp  json.hpp  main.cpp  notify.hpp  simple_bot.cpp  simple_bot.hpp
driver/: CMakeLists.txt
driver/sources/: main.cpp
